--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+#Disabling the auto Configuration
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
 
+#DataSource Connection
+#spring.datasource.url=jdbc:h2:~/testspring
+spring.datasource.url=jdbc:h2:tcp://localhost/~/testSpring
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+#enabling h2 console
+spring.h2.console.enabled=true
