--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,9 @@ spring.datasource.username=sa
 
 #enabling h2 console
 spring.h2.console.enabled=true
+
+#JPA parameters
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.generate-ddl-auto=update
+spring.jpa.generate-ddl=true
